<resources>
    <string name="app_name">MuContact</string>

    <!-- LoginActivity -->
    <string name="signUpTextView"><u>No account yet? Create one</u></string>
    <string name="error_message_login">You need a musician account</string>
    <string name="error_profile_musician">Error in musician profile</string>
    <string name="incorrect_login">User or password incorrect</string>

    <!-- RegisterActivity -->
    <string name="title_activity_register">Register</string>
    <string name="signInTextView"><u>Already a member? Login</u></string>
    <string name="user_saved">User saved</string>
    <string name="error_user_saved">Failed to save user</string>

    <!-- HomeActivity -->
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_orders">Orders</string>
    <string name="title_publications">Publications</string>
    <string name="title_contracts">Contracts</string>

    <!-- PublicationFragment -->
    <string name="instrument">Instrument</string>
    <string name="description">Description</string>
    <string name="locationReference">Location at</string>
    <string name="description_hint">Description</string>

    <!-- EditUserProfileActivity -->
    <string name="profile_update">Profile updated!</string>
    <string name="error_profile_update">Failed to update profile</string>

    <!-- InstrumentActivity -->
    <string name="instrument_save">Instrument save</string>
    <string name="error_instrument_save">Failed to save instrument</string>
    <string name="instrument_delete">Instrument delete</string>
    <string name="error_instrument_delete">Failed to delete instrument</string>

    <!-- PublicationActivity -->
    <string name="publication_save">Publication save</string>
    <string name="error_publication_save">Failed to save publication</string>
    <string name="publication_delete">Publication delete</string>
    <string name="error_publication_delete">Failed to delete publication</string>
    <string name="error_no_instruments_found">There are no registered instruments</string>

    <!-- OrderActivity -->
    <string name="order_save">Order save</string>
    <string name="error_order_save">Failed to save order</string>
    <string name="order_delete">Order delete</string>
    <string name="error_order_delete">Failed to delete order</string>

    <!-- Button -->
    <string name="signInButton">Login</string>
    <string name="signUpButton">Create account</string>
    <string name="exchangeButton">Exchange</string>
    <string name="deliveryDayButton">Delivery day</string>
    <string name="sendOrderButton">Send Order</string>
    <string name="cancelButton">Cancel</string>
    <string name="acceptButton">Accept</string>

    <!-- Hint -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="first_name_hint">First name</string>
    <string name="instrument_hint">Instrument</string>
    <string name="locationReference_hint">Location at</string>
    <string name="model_hint">Model</string>
    <string name="brand_hint">Brand</string>
    <string name="serialNumber_hint">Serial number</string>
    <string name="mucontactimage">MuContactImage</string>

    <!-- inavaid -->
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_displayName">Invalid first name</string>
    <string name="empty_fild">Fill empty field</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_activity_about_musician">Profile</string>

    <!-- samples -->
    <string name="sample_name" translatable="false">Sample Name</string>
    <string name="sample_email" translatable="false">Sample Email</string>
    <string name="sample_user_type" translatable="false">Sample User Type</string>
    <string name="sample_phone" translatable="false">Sample Phone</string>
    <string name="sample_gender" translatable="false">Sample Gender</string>
    <string name="sample_date" translatable="false">Sample Date</string>
    <string name="sample_level" translatable="false">Sample level</string>
    <string name="sample_description" translatable="false">Sample description</string>
    <string name="sample_category" translatable="false">Sample category</string>
    <string name="title_activity_reward">Rewards</string>
    <string name="title_activity_instrument">Instruments</string>
    <string name="title_activity_edit_musician_profile">Edit Profile</string>
    <string name="title_activity_about_reward">About Reward</string>
    <string name="title_activity_add_instrument">Add Instrument</string>
    <string name="title_activity_add_publication">Add Publication</string>
    <string name="title_activity_craftman">Craftmen</string>
    <string name="title_activity_about_craftman">About Craftman</string>

</resources>
