<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/orderConstraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.androidnetworking.widget.ANImageView
        android:id="@+id/photoOrderANImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/instrumentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instrument"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/photoOrderANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/instrumentTextView"
        app:layout_constraintStart_toEndOf="@id/photoOrderANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/locationReferenceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/locationReference"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
        app:layout_constraintStart_toEndOf="@id/photoOrderANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

</android.support.constraint.ConstraintLayout>